# gandalf

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_tests.py
docs/design/: desing-source.drawio
gandalf/: __init__.py
gandalf/test/: README.md  __init__.py  cond_params.py  tsne.py
gandalf/train/: README.md  data_preparation.py  delete_cli.py  models.py  test_cli.py  train_cli.py  utils.py
gandalf/train/data/sample/: params.npy
gandalf/train_adapter/: README.md  gandalf_train.py  gandalf_train_interface.py
gandalf/train_adapter/schemas/: config.json
gandalf/train_adapter/utils/: log_utils.py  train_utils.py
gandalf/utils/: __init__.py  delete_experiment.py  generate_samples.py
gandalf/visualization/: README.md  __init__.py  app.py  app_factory.py  configuration.json  load_utils.py  main.py  visualization_config.yaml
notebooks/: 1-gandalf-train.ipynb  2-tsne.ipynb  3-cond-prediction.ipynb  4-bokeh-gandalf-server.ipynb  README.md  train_config.yaml  visualization_config.yaml
notebooks/data/sample/: axis_labels.npy  ids.npy
test/: constants.py  test_generate_samples.py  test_test_module.py  test_train_adapter.py  test_train_cli.py  train_sample.yaml
