[project]
name = "gandalf"

version = "4.0.2"

description = "Generative Adversarial Networks for Disentangling and Learning Framework"

readme = "README.md"

requires-python = ">=3.9"

license-files = ["LICENSE.txt"]

authors = [
  {name = "Raúl Santoveña Gómez", email = "santovena.raul@gmail.com" }
]

maintainers = [
  {name = "Raúl Santoveña Gómez", email = "santovena.raul@gmail.com" },
  {name = "Ángel Regueiro Feal", email = "a.regueiro.feal@udc.es" }
]

dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "tensorflow",
  "tensorboard",
  "bokeh",
  "selenium",
  "jsonschema"
]

[project.urls]
"Homepage" = "https://github.com/raul-santovena/gandalf"

[project.scripts]
train_cli = "gandalf.train.train_cli:cli"
test_cli = "gandalf.train.test_cli:cli"
delete_cli = "gandalf.train.delete_cli:cli"

[tool.setuptools]
packages = ["gandalf", "gandalf.test", "gandalf.utils", "gandalf.train_adapter", "gandalf.train_adapter.utils", "gandalf.train", "gandalf.visualization"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"